# xiaomi_ai_llm

./: .env.example  .gitignore  DEV_COMMANDS.md  LICENSE  PROJECT_LOG.md  README.md  REMOTE_SHELL.md  TESTING.md  config.yaml  requirements.txt  start_client.sh  start_server.sh
device/: __init__.py  audio_capture.py  data_init_native_first.sh  native_audio_probe.sh  native_client.sh  native_first.env.example  native_first_client.sh  native_first_observer.sh  native_followup_probe.sh  native_reopen_manual_test.sh  native_reopen_probe.sh  native_result_timing_probe.sh  native_tts_trace.sh  native_wake_asr_trace.sh  native_wakeup_probe.sh  shell_client.sh  stream_client.sh  vad_record.sh  wake_monitor.sh
device/ettsc/: Cargo.toml  README.md  build.sh  deploy.sh
device/ettsc/src/: main.rs
device/followup_probe/: README.md  down_proxy.c  inject_expectspeech.sh  inject_v2.sh  usock_send.c
device/init.d/: sshen
device/micnorm/: README.md  build.sh  micnorm.c
docs/: BOOT0_SSH_RUNBOOK.md  BOOT_FLOW.md  BRINGUP_GUIDE.md  NATIVE_FIRST_ARCHITECTURE.md  OPERATIONS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
docs/agents/: README.md  interaction-log.example.md
docs/concepts/: boot-and-partitions.md  comparison.md  glossary.md  native-first.md
docs/getting-started/: bringup.md  quickstart.md
docs/history/: README.md  followup-exploration.md  journey.md
docs/runbooks/: autostart.md  boot0-ssh.md  boot1-ssh.md  operations.md  troubleshooting.md
scripts/: run_tests.sh
server/: main.py  sentence_splitter.py  streaming_pipeline.py
server/asr/: __init__.py  whisper_client.py
server/audio/: processor.py
server/llm/: claude_client.py  minimax_client.py
server/tts/: chattts_client.py  edge_tts.py  edge_tts_client.py  minimax_tts.py  tts_client.py
tests/: manual_native_first_cases.md  test_asr_quality.py  test_shell_config.py  test_streaming_pipeline.py
(+7 files in other folders)
